Fix components z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,8 @@
     top: -1px;
     margin-right: 5px;
   }
+
+  .add-button, .search-input {
+    z-index: 100;
+  }
 }
